monitoring/controllers/staging/kube-prometheus-stack/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer=clusterissuer-staging
  labels:
    cilium-lb-pool: gateway-pool
spec:
  gatewayClassName: cilium
  listeners:
    - name: grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.raymondcollazo.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: grafana-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana
  hostnames:
    - "grafana.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
