monitoring/controllers/staging/kube-prometheus-stack/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
  hostnames:
    - "grafana.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
